--- a/src/Component.css
+++ b/src/Component.css
@@ -1,12 +1,18 @@
-h1 {
-    color: blueviolet;
+
+.smallLogo {
+    width: 50px;
+    position: fixed;
+    bottom: 575px;
+    right: 755px;
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 .navigation {
     position: relative;
     width: 500px;
-    height: 165px;
-    margin-left: 465px;
-    margin-right: 100px;
+    height: 240px;
+    margin-left: 350px;
+    margin-right: 400px;
     margin-top: 30px;
     margin-bottom: 0px ;
     background: white;
@@ -14,3 +20,17 @@ h1 {
     border-style: solid;
     border-radius: 12px;
 }
+.line {
+    width: 499px;
+    height: 0;
+    border: .5px solid;
+    color: black;
+    margin-top: 30x;
+    display:inline-block;
+  }
+  p {
+      margin: 14px;
+  }
+  .schoolList {
+      margin-top: 600px;
+  }
