--- a/src/Component.css
+++ b/src/Component.css
@@ -1,18 +1,14 @@
 
 .smallLogo {
     width: 50px;
-    position: fixed;
-    bottom: 575px;
-    right: 755px;
+    position: relative;
     margin-top: 10px;
     margin-bottom: 0px;
 }
+
 .navigation {
-    position: relative;
     width: 500px;
     height: 240px;
-    margin-left: 350px;
-    margin-right: 400px;
     margin-top: 30px;
     margin-bottom: 0px ;
     background: white;
@@ -20,6 +16,7 @@
     border-style: solid;
     border-radius: 12px;
 }
+
 .line {
     width: 499px;
     height: 0;
@@ -28,9 +25,16 @@
     margin-top: 30x;
     display:inline-block;
   }
+
   p {
       margin: 14px;
   }
+
   .schoolList {
       margin-top: 600px;
+  }
+
+  h2 {
+    font-size: 20px;
+
   }
