--- a/src/Component.css
+++ b/src/Component.css
@@ -1,7 +1,7 @@
 
 .smallLogo {
     width: 50px;
-    position: relative;
+    text-align: left;
     margin-top: 10px;
     margin-bottom: 0px;
     
@@ -10,6 +10,8 @@
 .navigation {
     width: 500px;
     height: 240px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 30px;
     margin-bottom: 0px ;
     background: white;
@@ -35,15 +37,14 @@
       margin-top: 600px;
   }
 
-<<<<<<< HEAD
   h2 {
     font-size: 20px;
+  }
 
-=======
   .try {
       border: 1px solid;
       width: 500px;
       margin-left: auto;
       margin-right: auto;
->>>>>>> 142b64e7468f7032cbeb4df6eadbc93d39e0e642
+
   }
