--- a/client/src/Generator.css
+++ b/client/src/Generator.css
@@ -1,15 +1,11 @@
 
-.smallLogo {
-    width: 50px;
-    text-align: left;
-    margin-bottom: 0px;  
-}
+
 
 .navigation {
     width: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
+    margin-top: 10px;
     margin-bottom: 0px ;
     background: white;
     border-width: 1px;
@@ -17,22 +13,16 @@
     border-radius: 12px;
 }
 
-.line {
-    width: 499px;
-    height: 0;
-    border: .5px solid;
-    color: black;
-    display:inline-block;
-  }
-
   p {
       margin: 14px;
   }
 
-  .schoolList {
-      margin-top: 600px;
+  select {
+      margin-top: 10px;
   }
 
-  h2 {
-    font-size: 20px;
+  select 
+
+  h5 {
+    margin-top: 10px;
   }
