--- a/client/src/Mentors.css
+++ b/client/src/Mentors.css
@@ -1,60 +1,62 @@
 .Container {
     position: relative;
-    width: 1200px;
-    height: auto;
-    margin: 50px auto;
+    width: 1100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 40px 0;
 }
 
 .Container .Box {
     position: relative;
-    width: calc(400px - 60px);
-    height: calc(400px - 60px);
+    width: 300px;
+    height: 300px;
     background: white;
+    box-shadow: 0px 30px 50px rgba(0,0,0,0.05);
     border-width: 1px;
     border-style: solid;
     border-color: grey;
-    float: left;
-    margin: 15px;
-    box-sizing: border-box;
+    border-radius: 12px; 
     overflow: hidden;
-    border-radius: 10px; /* change to 12 */
 }
 
-
-.Profile {
+.Container .Box .Kyle {
     position: absolute;
-    top: 0;
+    top:0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: 0.5s;
-    z-index: 1;
+    transform: scale(1) translateY(0);
+} 
 
+.Container .Box:hover .Kyle {
+    transform: scale(0) translateY(-100%);
 }
 
-.Container .Box:hover .Profile {
-    top: 20px;
-    right: calc(50% - 40px);
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
+.Container .Box .Kyle img {
+    max-width: 100px;
 }
 
-.Container .Box .Profile .fa {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 80px;
-    transition: 0.5s;
-    color: #fff;
-}
-
-.Container .Box .KyleContent {
-    position: absolute;
-    top: 100px;
-    height: calc(100% - 100px); 
+.Container .Box .Content{
+    position: relative;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     padding: 20px;
-    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    transition: 0.5s;
+    background-color: grey;
+    transform: scale(1) translateY(calc(100% - 5px));
 }
+
+
