--- a/client/src/Mentors.css
+++ b/client/src/Mentors.css
@@ -1,6 +1,5 @@
 .Container {
     position: relative;
-    width: 1100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,9 +9,11 @@
 
 .Container .Box {
     position: relative;
-    width: 300px;
+    width: 325px;
     height: 300px;
-    background: white;
+    background:#e6e6e6;
+    margin-right: 25px;
+    align-items: center;
     box-shadow: 0px 30px 50px rgba(0,0,0,0.05);
     border-width: 1px;
     border-style: solid;
@@ -21,42 +22,69 @@
     overflow: hidden;
 }
 
-.Container .Box .Kyle {
+.Container .Box .Cover {
     position: absolute;
-    top:0;
+    top:25%;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
+    display:list-item;
     align-items: center;
+    justify-content: center;
+
     transition: 0.5s;
     transform: scale(1) translateY(0);
 } 
 
-.Container .Box:hover .Kyle {
-    transform: scale(0) translateY(-100%);
+.Container .Box:hover .Cover {
+    transform: scale(1) translateY(-100%);
 }
 
-.Container .Box .Kyle img {
+.Container .Box .Cover img {
+    border-radius: 50%;
+    width: 85px;
+    max-width: 100px;
+}
+
+.Container .Box .Content img {
+    border-radius: 50%;
+    width: 85px;
     max-width: 100px;
 }
 
 .Container .Box .Content{
     position: relative;
-    top:0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
     transition: 0.5s;
-    background-color: grey;
+    background-color: #005FFF;
     transform: scale(1) translateY(calc(100% - 5px));
 }
 
+.Container .Box:hover .Content {
+    transform: scale(1);
+}
 
+.Container .Box .Cover h15 {
+    font-size: 25px;
+}
+
+.Container .Box .Content h11 {
+    color: white;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.Container .Box .Content h12 {
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+}
