--- a/client/src/Mentors.css
+++ b/client/src/Mentors.css
@@ -90,11 +90,51 @@
 }
 
 
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid grey;
+    border-radius: 12px;
+    z-index: 10;
+    background-color: white;
+    width: 400px;
+    max-width: 70%; 
+}
 
+.popup.active {
+    transform: translate(-50%, -50%) scale(1);
+}
 
+.popup .CloseButton {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+}
+.popup .Content {
+    padding: 10px 15px;
+ }
 
+#overlay {
+    position: fixed;
+    transition: 200ms ease-in-out;
+    opacity: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.5);
+    pointer-events: none;
+}
 
-
+#overlay.active {
+    pointer-events: all;
+    opacity: 1;
+}
 
 
 
