--- a/client/src/Mentors.css
+++ b/client/src/Mentors.css
@@ -137,4 +137,43 @@
 }
 
 
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+ 
+.box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid grey;
+    border-radius: 12px;
+    z-index: 10;
+    background-color: white;
+    width: 400px;
+    max-width: 70%; 
+  overflow: auto;
+  padding: 20px 15px;
+}
+ 
+.popup-box .box .close-icon {
+    content: 'x';
+    cursor: pointer;
+    position: fixed;
+    right: calc(15% - 30px);
+    top: calc(100vh - 85vh - 33px);
+    background: #ededed;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    line-height: 20px;
+    text-align: center;
+    border: 1px solid #999;
+    font-size: 20px;
+}
 
