--- a/client/src/Mentors.css
+++ b/client/src/Mentors.css
@@ -177,3 +177,19 @@
     font-size: 20px;
 }
 
+.input {
+    border-radius: 12px;
+}
+h1{
+    font-size: 20px;
+    font: bold;
+}
+
+textarea {
+    border-color: rgba(0,0,0,0.5);
+    border-width: 2px;
+}
+
+label {
+    margin-top: 15px;
+}
